--- a/src/assets/scss/now-ui-kit/_example-pages.scss
+++ b/src/assets/scss/now-ui-kit/_example-pages.scss
@@ -110,6 +110,7 @@
     h5.description{
         max-width: 700px;
         margin: 20px auto 75px;
+        font-size: 30px
     }
 
     .nav-align-center{
